--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,5 +1,9 @@
 @import "reset";
-@import "base";
+
+@import "colors";
+@import "content";
 @import "helpers";
 @import "elements";
+
 @import "header";
+@import "operation";
