--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,6 +54,10 @@ table {
   border-spacing: 0;
 }
 
+.text-primary {
+  color: #9356DC;
+}
+
 body {
   color: #e1e1e1;
   font-size: 16px;
@@ -64,6 +68,12 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   margin-bottom: 10px;
+  color: #000;
+  font-weight: 700;
+}
+
+.title {
+  font-size: 18px;
 }
 
 .shrikhand {
@@ -118,6 +128,10 @@ h1, h2, h3, h4, h5, h6 {
   background: #f4f4f4;
 }
 
+.container {
+  margin: 20px;
+}
+
 .btn {
   border-radius: 40px;
   font-size: 14px;
@@ -132,6 +146,47 @@ h1, h2, h3, h4, h5, h6 {
 }
 .btn-primary:hover {
   background: linear-gradient(#9356DC, #FF79DA);
+}
+
+.btn-light {
+  background: #f4f4f4;
+  border: #f4f4f4;
+  color: #262626;
+}
+.btn-light:hover, .btn-light.active {
+  background: #dedcf2;
+  border: #dedcf2;
+}
+
+.btn-icon {
+  display: flex;
+  align-items: center;
+}
+.btn-icon i {
+  color: #7a7a7a;
+  margin-left: 10px;
+  margin-right: 15px;
+}
+.btn-icon.active i {
+  color: #9356DC;
+}
+
+.btn-alert {
+  position: relative;
+}
+.btn-alert .btn-alert-circle {
+  background-color: #9356DC;
+  color: #fff;
+  height: 18px;
+  width: 18px;
+  font-size: 10px;
+  font-weight: 300;
+  border-radius: 50%;
+  display: block;
+  line-height: 18px;
+  position: absolute;
+  top: calc(50% - 10px);
+  left: -7px;
 }
 
 .header {
@@ -196,6 +251,30 @@ h1, h2, h3, h4, h5, h6 {
   }
   .header-heading {
     padding: 70px 30px;
+  }
+}
+.operation {
+  padding: 20px 0;
+}
+
+.operation-actions {
+  padding-left: 6px;
+}
+
+.operation-actions .btn {
+  border-radius: 14px;
+  font-weight: 600;
+  width: 100%;
+  height: 54px;
+  margin-bottom: 20px;
+  box-shadow: 1px 7px 5px #ddd;
+}
+
+@media screen and (min-width: 900px) {
+  .operation-actions {
+    padding-left: 0;
+    display: flex;
+    gap: 30px;
   }
 }
 
