--- a/assets/sass/elements.scss
+++ b/assets/sass/elements.scss
@@ -6,11 +6,56 @@
 }
 
 .btn-primary {
-    background: linear-gradient(#FF79DA, #9356DC);
-    border: #9356DC;
+    background: linear-gradient($secondary, $primary);
+    border: $primary;
     color: #fff;
 
     &:hover {
-        background: linear-gradient(#9356DC, #FF79DA);
+        background: linear-gradient($primary, $secondary);
+    }
+}
+
+.btn-light {
+    background: $lightgray;
+    border: $lightgray;
+    color: $dark;
+
+    &:hover, &.active {
+        background: #dedcf2;
+        border: #dedcf2;
+    }
+}
+
+.btn-icon {
+    display: flex;
+    align-items: center;
+
+    i {
+        color: #7a7a7a;
+        margin-left: 10px;
+        margin-right: 15px;
+    }
+
+    &.active i {
+        color: $primary;
+    }
+}
+
+.btn-alert {
+    position: relative;
+
+    .btn-alert-circle {
+        background-color: $primary;
+        color: #fff;
+        height: 18px;
+        width: 18px;
+        font-size: 10px;
+        font-weight: 300;
+        border-radius: 50%;
+        display: block;
+        line-height: 18px;
+        position: absolute;
+        top: calc(50% - 10px);
+        left: -7px;
     }
 }
