Refactorisation + fichettes réstaurant

--- a/assets/sass/colors.scss
+++ b/assets/sass/colors.scss
@@ -10,3 +10,11 @@ $lightgray: #f4f4f4;
 .text-primary {
     color: $primary;
 }
+
+.bg-gray {
+    background: $gray;
+}
+
+.bg-lightgray {
+    background: $lightgray;
+}
