--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -2,8 +2,8 @@
 
 @import "colors";
 @import "content";
-@import "helpers";
-@import "elements";
+@import "buttons";
+@import "cards";
 
 @import "header";
-@import "operation";
+@import "body";
