--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,8 +58,16 @@ table {
   color: #9356DC;
 }
 
+.bg-gray {
+  background: #e1e1e1;
+}
+
+.bg-lightgray {
+  background: #f4f4f4;
+}
+
 body {
-  color: #e1e1e1;
+  color: #848484;
   font-size: 16px;
   font-weight: 300;
   font-family: "Roboto", sans-serif;
@@ -72,6 +80,10 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
 }
 
+img {
+  max-width: 100%;
+}
+
 .title {
   font-size: 18px;
 }
@@ -80,8 +92,10 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Shrikhand", sans-serif;
 }
 
-.text-center {
-  text-align: center;
+.container {
+  max-width: 1140px;
+  margin: 20px auto;
+  padding: 20px;
 }
 
 .ml-5 {
@@ -104,6 +118,16 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 10px;
 }
 
+.py-20 {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.py-40 {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
 .d-flex {
   display: flex;
 }
@@ -120,16 +144,8 @@ h1, h2, h3, h4, h5, h6 {
   justify-content: center;
 }
 
-.bg-gray {
-  background: #e1e1e1;
-}
-
-.bg-lightgray {
-  background: #f4f4f4;
-}
-
-.container {
-  margin: 20px;
+.text-center {
+  text-align: center;
 }
 
 .btn {
@@ -189,6 +205,68 @@ h1, h2, h3, h4, h5, h6 {
   left: -7px;
 }
 
+.card {
+  position: relative;
+  border-radius: 12px;
+  background: #fff;
+  margin-top: 15px;
+  box-shadow: 1px 7px 5px #ddd;
+}
+
+.card-flag {
+  position: absolute;
+  display: block;
+  padding: 5px 8px;
+  border-radius: 2px;
+  font-size: 12px;
+  font-weight: 500;
+  top: 10px;
+  right: 10px;
+  background: #99E2D0;
+  color: #2c8771;
+}
+
+.card-img img {
+  width: 100%;
+  height: 180px;
+  object-fit: cover;
+  border-radius: 12px 12px 0 0;
+}
+
+.card-content {
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.card-title {
+  margin: 4px 0;
+  font-weight: 600;
+}
+
+.card-text {
+  margin: 4px 0;
+  font-weight: 400;
+}
+
+.card-btn {
+  border: transparent;
+  background: transparent;
+  font-size: 18px;
+}
+
+@media screen and (min-width: 600px) {
+  .card-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 15px;
+  }
+}
+@media screen and (min-width: 900px) {
+  .card-container {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
 .header {
   text-align: center;
   padding-top: 5px;
@@ -199,7 +277,6 @@ h1, h2, h3, h4, h5, h6 {
   padding: 14px;
   border-top: 1px solid #b9afaf;
 }
-
 .header-info strong {
   font-weight: 500;
 }
@@ -212,18 +289,15 @@ h1, h2, h3, h4, h5, h6 {
 .header-heading {
   padding: 30px;
 }
-
 .header-heading .heading-title span,
 .header-heading .heading-content span {
   display: block;
 }
-
 .header-heading .heading-title {
   font-size: 24px;
   font-weight: 600;
   color: #262626;
 }
-
 .header-heading .heading-content {
   color: #262626;
 }
@@ -245,22 +319,17 @@ h1, h2, h3, h4, h5, h6 {
     width: 210px;
     margin-left: 5px;
   }
+  .header-heading {
+    padding: 70px 30px;
+  }
   .header-heading .heading-title span,
 .header-heading .heading-content span {
     display: inline;
   }
-  .header-heading {
-    padding: 70px 30px;
-  }
 }
-.operation {
-  padding: 20px 0;
-}
-
 .operation-actions {
   padding-left: 6px;
 }
-
 .operation-actions .btn {
   border-radius: 14px;
   font-weight: 600;
