--- a/assets/sass/body.scss
+++ b/assets/sass/body.scss
@@ -11,11 +11,27 @@
     }
 }
 
+.restaurant-slider img {
+    width: 100%;
+}
+
+// On tablette
+@media screen and (min-width: $minTablette) {
+    .restaurant-slider img {
+        max-height: 380px;
+        object-fit: cover;
+    }
+}
+
 // On desktop
 @media screen and (min-width: $minDesktop) {
     .operation-actions {
         padding-left: 0;
         display: flex;
         gap: 30px;
+    }
+
+    .restaurant-slider img {
+        max-height: 480px;
     }
 }
