--- a/assets/sass/content.scss
+++ b/assets/sass/content.scss
@@ -82,6 +82,19 @@ img {
     justify-content: center;
 }
 
+.justify-between {
+    justify-content: space-between;
+}
+
 .text-center {
     text-align: center;
 }
+
+.uppercase {
+    text-transform: uppercase;
+}
+
+.shadow {
+    box-shadow: 2px 2px 4px 0 rgb(0 0 0 / 20%);
+}
+
