--- a/assets/sass/body.scss
+++ b/assets/sass/body.scss
@@ -47,6 +47,20 @@
     }
 }
 
+.restaurant-menu-step {
+    margin-bottom: 30px;
+}
+
+.menu-step-title {
+    text-transform: uppercase;
+    font-size: 15px;
+    margin-top: 20px;
+    margin-left: 5px;
+    margin-bottom: 5px;
+    color: rgb(120, 120, 120);
+    font-weight: 300;
+}
+
 // On tablette
 @media screen and (min-width: $minTablette) {
     .restaurant-slider img {
