--- a/assets/sass/cards.scss
+++ b/assets/sass/cards.scss
@@ -3,7 +3,7 @@
     border-radius: 12px;
     background: #fff;
     margin-top: 15px;
-    box-shadow: 1px 7px 5px #ddd;
+    box-shadow: 1px 7px 5px rgb(230, 230, 230);
 }
 
 .card-flag {
@@ -27,7 +27,7 @@
 }
 
 .card-content {
-    padding: 10px;
+    padding: 10px 15px;
     display: flex;
     justify-content: space-between;
 }
@@ -42,6 +42,11 @@
 .card-text {
     margin: 4px 0;
     font-weight: 400;
+}
+
+.card-price {
+    margin-bottom: 5px;
+    margin-right: 10px;
 }
 
 .card-btn {
