--- a/assets/sass/buttons.scss
+++ b/assets/sass/buttons.scss
@@ -26,8 +26,8 @@
     transition: background .3s ease-in-out;
 
     &:hover, &.active {
-        background: #dedcf2;
-        border: #dedcf2;
+        background: #f4ebfd;
+        border: #f4ebfd;
     }
 }
 
