--- a/assets/sass/content.scss
+++ b/assets/sass/content.scss
@@ -54,8 +54,8 @@ img {
 
 .container {
     max-width: 1140px;
-    margin: 20px auto;
-    padding: 20px;
+    margin: 0 auto;
+    padding: 40px;
 }
 
 .ml-5 {
