--- a/assets/sass/cards.scss
+++ b/assets/sass/cards.scss
@@ -27,6 +27,10 @@
         color: #7a7a7a;
         text-decoration: none;
     }
+
+    .btn-heart {
+        margin-top: 5px;
+    }
 }
 
 @keyframes slidein {
@@ -102,46 +106,6 @@
     margin-bottom: 5px;
     margin-right: 10px;
     transition: margin-right .4s;
-}
-
-.card-btn {
-    border: transparent;
-    background: transparent;
-    font-size: 18px;
-    width: 32px;
-    height: 32px;
-    margin-right: 20px;
-    cursor: pointer;
-    position: relative;
-
-    .icon-empty,
-    .icon-full {
-        position: absolute;
-        top: calc(50% - 9px);
-        left: calc(50% - 9px);
-    }
-
-    .icon-empty {
-        transition: opacity .4s ease-in-out;
-    }
-
-    .icon-full {
-        background: -webkit-linear-gradient(bottom left, #FF79DA 30%, #9656DC 70%);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        opacity: 0;
-        transition: all .8s ease-in-out;
-    }
-
-    &:hover {
-        .icon-empty {
-            opacity: 0;
-        }
-
-        .icon-full {
-            opacity: 1;
-        }
-    }
 }
 
 // On tablette
