--- a/assets/sass/loader.scss
+++ b/assets/sass/loader.scss
@@ -12,8 +12,8 @@
 
     .loader-icon {
         margin: auto;
-        font-size: 38px;
-        color: #eee;
+        width: 60px;
+        animation: loading 1s linear infinite;
     }
 }
 
@@ -21,5 +21,14 @@
     to {
         opacity: 0;
         z-index: -1;
+    }
+}
+
+@keyframes loading {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
     }
 }
